--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,13 @@
             "@/*": ["./*"]
         }
     },
-    "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "app/test/index.test.js"],
+    "include": [
+        "next-env.d.ts",
+        "**/*.ts",
+        "**/*.tsx",
+        ".next/types/**/*.ts",
+        "app/test/index.test.js",
+        "until/produce.js"
+    ],
     "exclude": ["node_modules"]
 }
