--- a/package.json
+++ b/package.json
@@ -1,38 +1,47 @@
 {
-  "name": "roubit-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "test": "jest"
-  },
-  "dependencies": {
-    "immer": "^10.0.4",
-    "next": "14.1.4",
-    "react": "^18",
-    "react-dom": "^18",
-    "react-hook-form": "^7.51.1",
-    "redux": "^5.0.1",
-    "redux-saga": "^1.3.0"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.0.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.1.4",
-    "jest": "^29.7.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.3.0",
-    "typescript": "^5"
-  },
-  "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
-  "main": "postcss.config.js",
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+    "name": "roubit-app",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint",
+        "test": "jest"
+    },
+    "dependencies": {
+        "axios": "^1.6.8",
+        "immer": "^10.0.4",
+        "next": "14.1.4",
+        "react": "^18",
+        "react-dom": "^18",
+        "react-hook-form": "^7.51.1",
+        "react-redux": "^7.2.9",
+        "redux": "^4.0.0",
+        "redux-actions": "^3.0.0",
+        "redux-devtools-extension": "^2.13.9",
+        "redux-logger": "^3.0.6",
+        "redux-persist": "^6.0.0",
+        "redux-saga": "^1.3.0"
+    },
+    "devDependencies": {
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "@types/redux-action": "^1.2.8",
+        "@types/redux-actions": "^2.6.5",
+        "@types/redux-logger": "^3.0.13",
+        "autoprefixer": "^10.0.1",
+        "eslint": "^8",
+        "eslint-config-next": "14.1.4",
+        "jest": "^29.7.0",
+        "postcss": "^8",
+        "tailwindcss": "^3.3.0",
+        "typescript": "^5"
+    },
+    "description": "This is a [Next.js](https://nextjs.org/) project bootstrapped with [`create-next-app`](https://github.com/vercel/next.js/tree/canary/packages/create-next-app).",
+    "main": "postcss.config.js",
+    "keywords": [],
+    "author": "",
+    "license": "ISC"
 }
