--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
         "axios": "^1.6.8",
         "immer": "^10.0.4",
         "next": "14.1.4",
+        "next-redux-wrapper": "^8.1.0",
+        "prop-types": "^15.8.1",
         "react": "^18",
         "react-dom": "^18",
         "react-hook-form": "^7.51.1",
