--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
         "test": "jest"
     },
     "dependencies": {
+        "@apollo/client": "^3.9.10",
+        "@tanstack/react-query": "^5.28.9",
+        "@tanstack/react-query-devtools": "^5.28.10",
         "axios": "^1.6.8",
+        "graphql-request": "^6.1.0",
         "immer": "^10.0.4",
         "next": "14.1.4",
         "next-redux-wrapper": "^8.1.0",
@@ -24,7 +28,8 @@
         "redux-devtools-extension": "^2.13.9",
         "redux-logger": "^3.0.6",
         "redux-persist": "^6.0.0",
-        "redux-saga": "^1.3.0"
+        "redux-saga": "^1.3.0",
+        "zustand": "^4.5.2"
     },
     "devDependencies": {
         "@types/node": "^20",
